UI/src/assets/main.css
@import url(base.css);
:root {
  --component-light-blue: #384766;
  --component-dark-blue: #212b3f;
  --component-darker-blue: #151b27;
  --component-gray: rgb(155, 164, 181);
  --component-font-white: rgb(241, 246, 249);
  --component-selected-blue: rgb(38, 48, 68);
  --dashboard-background-blue: #131924;
  --dashboard-background-light-blue: rgb(25, 32, 46);
}
.wh-p {
    color: white;
    font-size: 1rem;
    font-family: "Montserrat", sans-serif;
}
.align-c {
  text-align: center;
}
.main-title {
    font-family: "Roboto", sans-serif;
    font-size: 2.5rem;
    color: inherit;
    width: 100%;
}
.subtitle{
    font-family: "Montserrat", sans-serif;

    font-size: 1.25rem;
    color: inherit;
}
#app{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    flex: 1;
    /* overflow: hidden; */
}
textarea:focus, input:focus{
    outline: none;
}
table, tr, th {
  border-spacing: 5px;
  border-collapse: collapse;
}
tdf {
  white-space: nowrap;

}
.flex {
  display: flex;
  
}
.main-button {
    background-color: var(--component-dark-blue);
    border: 1px solid transparent;
    border-radius: 0.75rem;
    color: #ffffff;
    cursor: pointer;
    flex: 0 0 auto;
    font-family: Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
      'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    font-size: 1.125rem;
    font-weight: 600;
    line-height: 1.5rem;
    padding: 0.75rem 1.2rem;
    text-align: center;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    width: auto;
  }
  
  .main-button:hover {
    background-color: var(--component-selected-blue);
  }
  
  .main-button:focus {
    box-shadow: none;
    outline: 2px solid transparent;
    outline-offset: 2px;
  }
  
  .secondary-button {
    appearance: none;
    background-color: transparent;
    border: 2px solid #ffffff;
    border-radius: 15px;
    cursor: pointer;
    display: inline-block;
    font-family: Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
      'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    font-size: 1.125rem;
    font-weight: 600;
    line-height: normal;
    margin: 0;
    min-width: 0;
    outline: none;
    padding: 0.75rem 1.2rem;
    text-align: center;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    width: auto;
    will-change: transform;
  }
  
.secondary-button:disabled {
    pointer-events: none;
}
  
.secondary-button:hover {
  color: #fff;
  background-color: var(--component-selected-blue);
  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
}
.add-button {
  background-color: #4ca0e7;
}
.decline-button {
  background-color: #f05e77;
}
.add-button:hover {
  background-color: #2492ec;
}
.decline-button:hover {
  background-color: #ff4463;
}

.input-wrapper {
  display: flex;
  flex-direction: column;
}.input-wrapper {
  display: flex;
  flex-direction: column;
}
.option-card {
  all: unset;
  background-color: #4ca0e7;
}


/* FORM STYLES-START */
.form-container {
  height: 100%;
  width: 100%;
  /* z-index: 999; */
  max-width: 25rem;
  max-height: 40rem;
  display: flex;
  align-items: center;
  justify-content: center;

  padding: 1rem;
  /* background: url('/images/form-background.svg') no-repeat; */
  background-color: #212A3E;
  background-size: cover;
  background-position: center;
  border-radius: 15px;
  font-family: 'Robot', sans-serif;
}
.form {
  width: 100%;
  height: 80%;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;

  padding: 1rem;
  color: white;
}
.input-field {
  /* background-color: rgba(0, 45, 83, 1); */
  background-color: #394867;
  font-size: 1rem;
  min-height: 2.5rem;
  padding: 0.5rem;
  border-radius: 5px;
  color: inherit;
}
.submit-button {
  padding: 0.5rem;
  border-radius: 5px;
}
.submit-button:hover {
  background-color: #0068bd;
}
.select-wrapper {
  background-color: rgb(57, 72, 103);
  --vs-dropdown-bg: rgb(57, 72, 103);
  --vs-dropdown-option-bg: white;
  --vs-dropdown-option--active-bg: rgb(69, 88, 126);
  --vs-dropdown-option--active-color: #fff;
  --vs-search-input-color: #fff;
  --vs-dropdown-color: white;
  --vs-controls-color: white;
  --vs-dropdown-option-color: var(--vs-dropdown-color);
  --vs-dropdown-option-padding: 3px 20px;
  --vs-selected-color: white;
  --vs-selected-border-color: var(--vs-border-color);
  --vs-selected-bg: rgb(3, 59, 105);
  /* --vs-selected-color: rgb(0, 45, 83); */
  color: white;
  border-radius: 5px;
  width: 15.31rem;
}
/* FORM STYLE END */


/* LIST COMPONENT STYLES-START*/

.list-container {
  /* background-image: url('/images/waitList-background.svg'); */
  background-color: rgb(33, 42, 62);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;

  color: white;
  font-family: 'Roboto', sans-serif;

  width: 23.4375rem;
  border-radius: 15px;
  min-width: 18rem;
  height: 100%;
  max-height: 40rem;
}
.list {
  width: 100%;
  height: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 1rem;
  padding: 1rem 0;
  min-height: fit-content;
  overflow-y: auto;
}
.main-title {
  min-height: fit-content;
  font-size: 1.5rem;
}

/* LIST COMPONENT STYLES-END */
.shadow {
  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
}

/* CHART STYLES */
.chart {
  width: 31rem;
  height: 20rem;
  background-color: var(--component-dark-blue);
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;

}
/* CHART STYLES */

